# lds-dl85

./: .gitignore  Cargo.toml  README.md  bitbucket-pipelines.yml  limited_recursion.py  lunch_tests.py  optimal_eval.py  requirements.txt  roadmap.md  utils.py
datasets/: test.txt
src/: cli.rs  config.rs  data.rs  main.rs  mining.rs  tree.rs
src/cache/: mod.rs  trie.rs
src/data/: dt.rs  dt_chuncked.rs  dt_longed.rs  mod.rs
src/dl85/: basic_dl85.rs  mod.rs
src/experiments/: experiments.rs
src/mining/: itemset_bitvector_trait.rs  its_ops.rs  its_ops_chunked.rs  its_ops_long.rs  mod.rs  types_def.rs
src/node/: mod.rs  node.rs
src/solution/: export.rs  mod.rs  solution.rs  tree.rs
