[package]
name = "sandbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
substring = "1.4.5"
float-cmp = "0.9.0"
clokwerk = "0.4.0-rc1"
#plotters = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

